syntax = "proto3";

package api.server.queue.v1;

import "google/api/annotations.proto";

option go_package = "github.com/mohaijiang/computeshare-server/api/queue/v1;v1";
option java_multiple_files = true;
option java_package = "api.compute.v1";

enum TaskCmd //枚举消息类型
{
  VM_CREATE = 0; // 创建虚拟机
  VM_DELETE = 1;  // 删除虚拟机
  VM_START = 2; // 启动虚拟机
  VM_SHUTDOWN = 3;  //关闭虚拟机
  VM_RESTART = 4;  //关闭虚拟机
  VM_RECREATE = 5;  // 虚拟机重置
  NAT_PROXY_CREATE = 6; // nat 代理创建
  NAT_PROXY_DELETE = 7; // nat 代理删除
  NAT_PROXY_EDIT = 8;   // nat 编辑
  NAT_VISITOR_CREATE = 9; // nat 访问创建
  NAT_VISITOR_DELETE = 10; // nat 访问删除
  STORAGE_CREATE = 11; // 存储节点创建（虚拟机)
  STORAGE_DELETE = 12; // 存储节点删除（虚拟机）
  PING = 99; // ping
}

enum TaskStatus // 任务状态
{
  CREATED = 0; //创建
  EXECUTING = 1; //执行中
  EXECUTED = 2 ; // 执行成功
  FAILED = 3 ; // 执行失败
}

service QueueTask {
  // 查询队列任务
  rpc GetAgentTask(QueueTaskGetRequest) returns (QueueTaskGetResponse) {
    option (google.api.http) = {
      get: "/v1/queue/task",
    };
  }

  // 更新任务状态
  rpc UpdateAgentTask(QueueTaskUpdateRequest) returns (QueueTaskUpdateResponse) {
    option (google.api.http) = {
      put: "/v1/queue/task",
      body: "*"
    };
  }

}

message QueueTaskGetRequest{
  string id = 1;
}

message QueueTaskGetResponse{
  int32 code = 1;
  string message = 2;
  QueueTaskVo data = 3;
}

message QueueTaskVo {
  string id = 1;  // 任务id
  string agentId = 2; // 客户端节点id
  TaskCmd cmd = 3;    // 执行任务枚举
  string params = 4;  // 执行参数，nat 网络类型对应 NatProxyCreateVO, 虚拟机类型对应 ComputeInstanceTaskParamVO
  TaskStatus status = 5;  // 任务状态
}

message QueueTaskUpdateRequest {
  string id = 1;
  string agentId = 2;
  TaskStatus status = 3;
}

message QueueTaskUpdateResponse {
  int32 code = 1;
  string message = 2;
}

message NatNetworkMappingTaskParamVO {
  string id = 1;
  string name = 2;
  string instanceId = 3;
  int32 instancePort = 4;
  int32 remotePort = 5;
  string gatewayId = 6;
  string gatewayIp = 7;
  int32 gatewayPort = 8;
  string protocol = 9;
}

message ComputeInstanceTaskParamVO {
  string id = 1;
  string name = 2;
  int64 cpu = 3;
  int64 memory = 4;
  string image = 5;
  string publicKey = 6;
  string password = 7;
  string instanceId = 8;
  string gatewayIp = 9;
  int32 gatewayPort = 10;
  string vncConnectIp = 11;
  int32 vncConnectPort = 12;
  string docker_compose = 13;
}

message StorageSetupTaskParamVO {
  string id = 1;
  string masterServer = 2;
  string publicIp = 3;
  int32 publicPort = 4;
  int32 grpcPort = 5;
}
