syntax = "proto3";
package kratos.api;

option go_package = "github.com/mohaijiang/computeshare-server/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Auth auth = 3;
  Dispose dispose = 4;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    google.protobuf.Duration dial_timeout = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
  }
  message Ipfs {
    string url = 1;
  }
  Database database = 1;
  Redis redis = 2;
  Ipfs ipfs = 3;
}

message Auth {
  string service_key = 1;
  string api_key = 2;
}

message Dispose{
  S3 s3 = 1;
  Dh3t dh3t = 2;
  Domain domain = 3;
  Alipay alipay = 4;

  message S3{
    string target_docker_host = 1;
    string target_docker_container_name = 2;
    string endpoint = 3;
    string region = 4;
    string s3_url_prefix = 5;
    string url_prefix = 6;
  }

  message Dh3t{
    string account = 1;
    string password = 2;
    string send_url = 3;
    string verification_code_template_id = 4;
    string deductions_but_insufficient_balance_template_id = 5;
    string deductions_successful_template_id = 6;
    string three_days_before_expiration_template_id = 7;
  }

  message Domain {
    string vnc_host = 1;
    string api_host = 2;
  }

  message Alipay {
    string app_id = 1;
    string alipay_public_cert_path = 2;
    string alipay_root_cert_path = 3;
    string app_public_cert_path = 4;
    string app_private_key = 5;
    string pay_return_url = 6;
    string pay_notify_url = 7;
  }
}
